# vibervn_limit

./: .gitignore  README.md  test_icon.rs
.agent/workflows/: dev.md
.github/workflows/: release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
src/: index.html  popup.js  settings.html  settings.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  icon.rs  lib.rs  store.rs
